# scada-api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
src/: main.py
src/domain/: exceptions.py  models.py
src/infrastructire/: amqp.py  consumers.py  factories.py  logging.py  orm.py  publishers.py  repository.py  settings.py  storages.py  uow.py
src/presentation/: admin.py  application.py  dependencies.py
src/presentation/errors/: __init__.py  base.py  handlers.py  registry.py
src/presentation/middlewares/: logging_middleware.py
src/presentation/models/: paths.py  requests.py  responses.py
src/presentation/routes/commands/: __init__.py  holders.py  indicators.py  tech_nests.py
src/presentation/routes/events/: indicators.py
src/presentation/routes/queries/: __init__.py  holders.py  indicators.py  tech_nests.py
src/presentation/routes/subscriptions/: __init__.py  heartbeat.py  tech_nests.py
src/service_layer/: bootstrap.py  dependencies.py
src/service_layer/cqrs/: __init__.py  mediator.py
src/service_layer/cqrs/container/: __init__.py  di.py
src/service_layer/cqrs/dispatcher/: __init__.py  (+3 more)
src/service_layer/event_driven/: __init__.py  mediator.py
src/service_layer/handlers/: commands.py  queries.py  subscriptions.py
src/service_layer/models/: commands.py  events.py  queries.py  responses.py  validation.py
tests/: conftest.py  pytest-config.ini
tests/integration/: fixtures.py  init_database.sql  report.xml  test_init_orm.py
tests/unit/: test_first.py
(+35 files in other folders)
